--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -278,7 +278,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Loadings"
+    "## Pre-Trained Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Download"
    ]
   },
   {
@@ -293,7 +300,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "%%capture\n",
+    "!bash pytorch-CycleGAN-and-pix2pix/scripts/download_cyclegan_model.sh style_monet\n",
+    "'''"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,10 +315,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "%%capture\n",
+    "!bash pytorch-CycleGAN-and-pix2pix/scripts/download_cyclegan_model.sh style_vangogh\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**ukiyoe2photo**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "%%capture\n",
+    "!bash pytorch-CycleGAN-and-pix2pix/scripts/download_cyclegan_model.sh style_ukiyoe\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model loading "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n",
+    "style_monet_model = torch.load('checkpoints/style_monet_pretrained/latest_net_G.pth')\n",
+    "style_vangogh_model = torch.load('checkpoints/style_vangogh_pretrained/latest_net_G.pth')\n",
+    "style_ukiyoe_model = torch.load('checkpoints/style_ukiyoe_pretrained/latest_net_G.pth')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**photo2monet fake**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------- Options ---------------\n",
+      "             aspect_ratio: 1.0                           \n",
+      "               batch_size: 1                             \n",
+      "          checkpoints_dir: ./checkpoints                 \n",
+      "                crop_size: 256                           \n",
+      "                 dataroot: pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB\t[default: None]\n",
+      "             dataset_mode: single                        \n",
+      "                direction: AtoB                          \n",
+      "          display_winsize: 256                           \n",
+      "                    epoch: latest                        \n",
+      "                     eval: False                         \n",
+      "                  gpu_ids: -1                            \t[default: 0]\n",
+      "                init_gain: 0.02                          \n",
+      "                init_type: normal                        \n",
+      "                 input_nc: 3                             \n",
+      "                  isTrain: False                         \t[default: None]\n",
+      "                load_iter: 0                             \t[default: 0]\n",
+      "                load_size: 256                           \n",
+      "         max_dataset_size: inf                           \n",
+      "                    model: test                          \n",
+      "             model_suffix:                               \n",
+      "               n_layers_D: 3                             \n",
+      "                     name: style_monet_pretrained        \t[default: experiment_name]\n",
+      "                      ndf: 64                            \n",
+      "                     netD: basic                         \n",
+      "                     netG: resnet_9blocks                \n",
+      "                      ngf: 64                            \n",
+      "               no_dropout: True                          \t[default: False]\n",
+      "                  no_flip: False                         \n",
+      "                     norm: instance                      \n",
+      "                 num_test: 50                            \n",
+      "              num_threads: 4                             \n",
+      "                output_nc: 3                             \n",
+      "                    phase: test                          \n",
+      "               preprocess: resize_and_crop               \n",
+      "              results_dir: ./results/                    \n",
+      "           serial_batches: False                         \n",
+      "                   suffix:                               \n",
+      "                use_wandb: False                         \n",
+      "                  verbose: False                         \n",
+      "       wandb_project_name: CycleGAN-and-pix2pix          \n",
+      "----------------- End -------------------\n",
+      "dataset [SingleDataset] was created\n",
+      "initialize network with normal\n",
+      "model [TestModel] was created\n",
+      "loading the model from ./checkpoints/style_monet_pretrained/latest_net_G.pth\n",
+      "/Users/kerr/Desktop/NYU/Spring 2025/Introduction to Computer Vision/Style-Transfer/pytorch-CycleGAN-and-pix2pix/models/base_model.py:192: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state_dict = torch.load(load_path, map_location=str(self.device))\n",
+      "---------- Networks initialized -------------\n",
+      "[Network G] Total number of parameters : 11.378 M\n",
+      "-----------------------------------------------\n",
+      "creating web directory ./results/style_monet_pretrained/test_latest\n",
+      "processing (0000)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-01 17:41:55.jpg']\n",
+      "processing (0005)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-02 19:18:15.jpg']\n",
+      "processing (0010)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-04 10:13:12.jpg']\n",
+      "processing (0015)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-05 03:00:51.jpg']\n",
+      "processing (0020)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-05 21:54:30.jpg']\n",
+      "processing (0025)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-06 17:25:15.jpg']\n",
+      "processing (0030)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-07 22:18:53.jpg']\n",
+      "processing (0035)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-10 20:02:04.jpg']\n",
+      "processing (0040)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-12 04:31:04.jpg']\n",
+      "processing (0045)-th image... ['pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB/2014-08-13 09:33:33.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python pytorch-CycleGAN-and-pix2pix/test.py --dataroot pytorch-CycleGAN-and-pix2pix/datasets/monet2photo/testB --name style_monet_pretrained --model test --no_dropout --gpu_ids -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**photo2vangogh fake**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**photo2ukiyoe fake**"
    ]
   }
  ],
